--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "raytracing_demo"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.65"
 nalgebra = "0.31.2"
@@ -12,3 +10,6 @@ num-traits = "0.2.15"
 pixels = "0.9.0"
 rayon = "1.5.3"
 winit = "0.27.4"
+
+[profile.release]
+lto = true
