--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ nalgebra = "0.31.2"
 num-traits = "0.2.15"
 pixels = "0.9.0"
 rayon = "1.5.3"
+time = "0.3.15"
 winit = "0.27.4"
 
 [profile.release]
