--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,7 @@
-[package]
-name = "raytracing_demo"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-anyhow = "1.0.65"
-nalgebra = "0.31.2"
-num-traits = "0.2.15"
-pixels = "0.9.0"
-rayon = "1.5.3"
-time = "0.3.15"
-winit = "0.27.4"
-
-[profile.release]
-lto = true
+members = [
+    "raytracing",
+    "example_rt"
+]
+resolver = "2"
