--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
-members = [
-    "raytracing",
-    "example_rt"
-]
+members = [ "example_rt", "raytracing" ]
 resolver = "2"
 
-# [profile.release]
-# lto = true
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+lto = true
