--- a/example_rt/config.toml
+++ b/example_rt/config.toml
@@ -1,5 +1,10 @@
 [build]
 target = [ "x86_64-unknown-linux_gnu" ]
 
+[target.x86_64-pc-windows-gnu]
+rustflags = [ "-C", "linkarg=-fuse-ld=lld-link" ]
+
 [target.x86_64-unknown-linux_gnu]
+ar = "x86_64-w64-mingw32-gcc-ar"
+linker = "x86_64-w64-mingw32-gcc"
 rustflags = [ "-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld" ]
